# naivphys4rp

./: .gitmodules  README.md
literature/: .~nalProposal.docx
naivphys4rp/: CMakeLists.txt  package.xml
naivphys4rp/descriptors/analysis_engines/: naivphys4rp_demo.yaml
resources/: muster_query_naivphysrp.txt
rosinstall/: naivphys4rp.rosinstall
